# fastAPI_test

./: .gitignore  .isort.cfg  main.py  pyproject.toml
db/: base.py
db_for_test/: base.py
routers/users/: models.py
routers/users/api/v1/: user_router.py
routers/users/api/v1/schemas/: user_info_request.py  user_info_response.py
routers/users/services/: user_info_service.py
routers/users/tests/api/v1/: test_user_router.py
utils/: utils.py
