[tool.poetry]
name = "yogayo_fast_api"
version = "0.1.0"
description = ""
authors = ["about-joo91 <about.joo91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
PyJWT = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
