[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["about-joo91 <about.joo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pytest = "^7.1.3"
httpx = "^0.23.0"
pytest-asyncio = "^0.19.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"
PyJWT = "^2.5.0"
uvicorn = "^0.18.3"
unittest = "^0.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]