[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["about-joo91 <about.joo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
uvicorn = "^0.18.3"
httpx = "^0.23.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
SQLAlchemy = "^1.4.41"
PyJWT = "^2.5.0"
psycopg2-binary = "^2.9.4"
SQLAlchemy-Utils = "^0.38.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
